--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -3,6 +3,12 @@
   z-index: -1;
   display: block;
   border: none;
+  width: 100%;
+  height: 100%;
+  background: url('/assets/images/new-zealand.jpg') left top no-repeat;
+  -webkit-background-size: cover;
+  background-size: cover;
+
 }
 
 .logo {
@@ -17,4 +23,9 @@
 
 .columns.large-centered {
   overflow: auto;
+}
+.row {
+  margin: 20px;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.9);
 }
