--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,13 @@
-<h2>Welcome to Ember.js</h2>
+<div class="container">
+  <div id="bg">
 
-{{outlet}}
+  <div class="row">
+    <div class="large-12 columns">
+      <h2>Welcome to Ember.js</h2>
+
+      {{outlet}}
+    </div>
+  </div>
+  </div>
+
+</div>
