added a few tests

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,11 +3,7 @@
 
   <div class="row">
     <div class="large-12 columns">
-<<<<<<< HEAD
-      <h2>Welcome to Ember.js</h2>
-=======
-      <h2>Hello</h2>
->>>>>>> 3-add-css
+      <h2>My Bucket List</h2>
 
       {{outlet}}
     </div>
