--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,7 +3,7 @@
 
   <div class="row">
     <div class="large-12 columns">
-      <h2>Hello</h2>
+      <h2>My Bucket List</h2>
 
       {{outlet}}
     </div>
